--- a/resources/public/hsbox.css
+++ b/resources/public/hsbox.css
@@ -78,6 +78,8 @@ tr th{
   border-left: 1px solid rgb(35,39,43);
   border-right: 1px solid rgb(35,39,43);
   transition: all 0.3s ease;
+  line-height: 30px;
+
 }
 
 .panel-default>.panel-heading{
@@ -227,7 +229,10 @@ a {
     box-shadow: none;
     word-wrap: break-word;
     width: 90%;
+    background: #182128;
     margin-left: 36px;
+    color: #fff;
+    border: #182128;
 }
 #notes-container .well{
   width:inherit;
